--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,19 @@
       <connection>scm:git:file://C:/integ_continue/git/training-app</connection>
       <developerConnection>scm:git:file://C:/integ_continue/git/training-app</developerConnection>
    </scm> -->
+<distributionManagement>
+  <repository>
+    <id>nexus</id>
+    <name>Releases</name>
+    <url>http://localhost:8081/repository/maven-releases</url>
+  </repository>
+  <snapshotRepository>
+        <id>nexus</id>
+    <name>Snapshot</name>
+    <url>http://localhost:8081/repository/maven-snapshots</url>
+  </snapshotRepository>
+</distributionManagement>
+
 
   <dependencies>
     <dependency>
