--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,6 +8,15 @@ node {
       // **       in the global configuration.           
       mvnHome = tool 'Maven3'
    }
+   stage('SonarQube analysis') {
+             // Run the maven build
+      if (isUnix()) {
+         sh "'${mvnHome}/bin/mvn' -Dmaven.test.failure.ignore clean build"
+      } else {
+         bat(/"${mvnHome}\bin\mvn" -B sonar:sonar/)
+      }
+        }
+        
    stage('Build') {
       // Run the maven build
       if (isUnix()) {
