--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,7 +11,7 @@ node {
    stage('SonarQube analysis') {
              // Run the maven build
       if (isUnix()) {
-         sh "'${mvnHome}/bin/mvn' -Dmaven.test.failure.ignore clean build"
+         sh "'${mvnHome}/bin/mvn' -B sonar:sonar"
       } else {
          bat(/"${mvnHome}\bin\mvn" -B sonar:sonar/)
       }
